rename to divvystat.us

--- a/templates/main.html
+++ b/templates/main.html
@@ -52,7 +52,7 @@
     <div id="map">
     </div>
     <div id="header">
-        <h1>dvMap : Divvy Usage and Availabilty Map</h1>
+        <h1>DivvyStat.us : Divvy Usage and Rebalancing Analysis</h1>
     </div>
     <div id="content">
         <div id="content-column-1">
