--- a/templates/main.html
+++ b/templates/main.html
@@ -7,7 +7,7 @@
     <meta name='title' content='dvMap' />
     <meta name='description' content='An interactive map using a combination of data related to useage of the Divvy bike system.' />
 
-    <title>dvMap</title>
+    <title>DivvyStat.us</title>
     <style>
         /* core style */
         body { font-family: 'Maven Pro', sans-serif; color: #333; background-color: #DDE2E3; }
