fix title and case in header line

--- a/templates/main.html
+++ b/templates/main.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name='viewport' content='width=device-width, initial-scale=0.72, maximum-scale=0.72, user-scalable=no' />
-    <meta name='title' content='dvMap' />
+    <meta name='title' content='divvystat.us' />
     <meta name='description' content='An interactive map using a combination of data related to useage of the Divvy bike system.' />
 
-    <title>DivvyStat.us</title>
+    <title>divvystat.us</title>
     <style>
         /* core style */
         body { font-family: 'Maven Pro', sans-serif; color: #333; background-color: #DDE2E3; }
@@ -52,7 +52,7 @@
     <div id="map">
     </div>
     <div id="header">
-        <h1>DivvyStat.us : Divvy Usage and Rebalancing Analysis</h1>
+        <h1>divvystat.us : divvy usage and rebalancing analysis</h1>
     </div>
     <div id="content">
         <div id="content-column-1">
