--- a/templates/main.html
+++ b/templates/main.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name='viewport' content='width=device-width, initial-scale=0.72, maximum-scale=0.72, user-scalable=no' />
     <meta name='title' content='divvystat.us' />
-    <meta name='description' content='An interactive map using a combination of data related to useage of the Divvy bike system.' />
+    <meta name='description' content='an interactive map-based application for presentation and analysis of usage and rebalancing performance of the divvy bike sharing system in Chicago, IL' />
 
     <title>divvystat.us</title>
     <style>
