--- a/templates/main.html
+++ b/templates/main.html
@@ -10,7 +10,7 @@
     <title>divvystat.us</title>
     <style>
         /* core style */
-        body { font-family: 'Maven Pro', sans-serif; color: #333; background-color: #DDE2E3; }
+        body { font-family: 'Maven Pro', sans-serif; color: #333; background-color: #DDE2E3; min-width: 800px;}
         a, a:hover { /* text-decoration: none; */ color: #333; }
         p { line-height: 1.4em; font-size: 1.2em; }
         #wrap { width: 86%; margin: 10px auto 40px auto; padding: 20px 20px 40px 20px; background-color: white; }
@@ -28,14 +28,14 @@
         .rentals { background-color: #3DB7E4; color: white; }
         .returns { background-color: #788A91; color: white; }
         /* style for outage charts */
-        #outage-line { height: 220px; width: 90%; background-color: blue; }
-        #outage-chart { height: 220px; width: 90%; background-color: red; }
+        #outage-line { height: 220px; margin-top: -10px; }
+        #outage-bar { height: 220px; margin-top: -10px; }
         /* content formatting (below map) */
         #content { width: 100%; margin: auto; padding: 0; }
         #footer { margin: 0; background-color: #3DB7E4; }
         #footer h1 { padding: 5px; color: white; }
         #content-column-1 { width: 46%; margin: 0 2% 0 2%; float: left; }
-        #content-column-2 { width: 46%; margin: 0 2% 0 2%; float: left; padding-top: 28px; }
+        #content-column-2 { width: 46%; margin: 0 2% 0 2%; float: left; }
         .clear { clear: both; }
     </style>
 
@@ -93,10 +93,11 @@
             </div>
 
             <div id="content-column-2">
+                <p>number of outages in last 72 hours</p>
                 <div id="outage-line">
                 </div>
-                <br/>
-                <div id="outage-chart">
+                <p>average concurrent outages over last 30 days</p>
+                <div id="outage-bar">
                 </div>
             </div>
         </div>
