--- a/templates/main.html
+++ b/templates/main.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name='viewport' content='width=device-width, initial-scale=0.72, maximum-scale=0.72, user-scalable=no' />
     <meta name='title' content='divvystat.us' />
-    <meta name='description' content='an interactive map-based application for presentation and analysis of usage and rebalancing performance of the divvy bike sharing system in Chicago, IL' />
+    <meta name='description' content='an interactive map-based application for presentation and metrics of usage and rebalancing performance of the divvy bike sharing system in Chicago, IL' />
 
     <title>divvystat.us</title>
     <style>
@@ -65,7 +65,7 @@
         <div id="map">
         </div>
         <div id="header">
-            <h1>divvystat.us : divvy usage and rebalancing analysis</h1>
+            <h1>divvystat.us : usage and rebalancing metrics</h1>
         </div>
         <div id="content">
             <div id="content-column-1">
@@ -89,11 +89,11 @@
                 <p>This interactive application was originally created for the
                 <a href="http://divvybikes.com/datachallenge">Divvy Data Challenge</a>
                 by <a href="http://vicg4rcia.com">Vic Garcia</a>. The code is on available
-                for review on <a href="http://github.com/vicgarcia/dvMap">GitHub</a>.</p>
+                on <a href="http://github.com/vicgarcia/dvMap">GitHub</a>.</p>
             </div>
 
             <div id="content-column-2">
-                <p>number of outages in last 72 hours</p>
+                <p>number of concurrent outages in last 72 hours</p>
                 <div id="outage-line">
                 </div>
                 <p>average concurrent outages over last 30 days</p>
