--- a/templates/main.html
+++ b/templates/main.html
@@ -81,15 +81,16 @@
 
                 <p>The chart and graph to the right show data on rebalancing efforts and
                 "outages", which occur when a station is either out of service, has no bikes
-                available, or has dock spaces available for returns.  The line chart shows
+                available, or has no dock spaces available for returns.  The line chart shows
                 the number of station outages over the last 72 hours.  The bar graph shows
                 the average number of concurrent outages by day of the week over the
                 last 30 days.</p>
 
                 <p>This interactive application was originally created for the
                 <a href="http://divvybikes.com/datachallenge">Divvy Data Challenge</a>
-                by <a href="http://vicg4rcia.com">Vic Garcia</a>. The code is on available
-                on <a href="http://github.com/vicgarcia/dvMap">GitHub</a>.</p>
+                by <a href="http://vicg4rcia.com">Vic Garcia</a>.</p>
+                <p>The source code is on available on
+                <a href="http://github.com/vicgarcia/dvMap">GitHub</a>.</p>
             </div>
 
             <div id="content-column-2">
