update tracking for piwik.bsctechnology.net

--- a/templates/main.html
+++ b/templates/main.html
@@ -111,9 +111,9 @@
         _paq.push(['trackPageView']);
         _paq.push(['enableLinkTracking']);
         (function() {
-            var u="//stats.rockst4r.net/";
+            var u="//piwik.bsctechnology.net/";
             _paq.push(['setTrackerUrl', u+'piwik.php']);
-            _paq.push(['setSiteId', 15]);
+            _paq.push(['setSiteId', 1]);
             var d=document,
                 g=d.createElement('script'),
                 s=d.getElementsByTagName('script')[0];
@@ -125,7 +125,7 @@
         })();
     </script>
     <noscript>
-      <p><img src="//stats.rockst4r.net/piwik.php?idsite=15" style="border:0;" alt="" /></p>
+        <p><img src="//piwik.bsctechnology.net/piwik.php?idsite=1" style="border:0;" alt="" /></p>
     </noscript>
 
 </body>
