sweeping approach to divvystat rename
- change filename stubs from dvmap to divvystat where relevant
- change namespace w/in codebase from dvMap to DivvyStat
- make filename changes needed for namespace change
- update namespace usage, defination in composer.json
- TODO : migrate database name? handle this somehow?

--- a/templates/main.html
+++ b/templates/main.html
@@ -49,9 +49,9 @@
     <link rel="stylesheet" href="/js/libs/Leaflet.awesome-markers/leaflet.awesome-markers.css" />
 
     <!-- favicons -->
-    <link rel="shortcut icon" href="/dvmap-icon.ico"/>
-    <link rel="icon" href="/dvmap-icon.ico"/>
-    <link rel="apple-touch-icon" href="/dvmap-icon.png">
+    <link rel="shortcut icon" href="/divvystat-icon.ico"/>
+    <link rel="icon" href="/divvystat-icon.ico"/>
+    <link rel="apple-touch-icon" href="/divvystat-icon.png">
     <link rel="image_src" href="/thumbnail.png"/>
 
     <!-- require.js bootstrap -->
@@ -90,7 +90,7 @@
                 <a href="http://divvybikes.com/datachallenge">Divvy Data Challenge</a>
                 by <a href="http://vicg4rcia.com">Vic Garcia</a>.</p>
                 <p>The source code is on available on
-                <a href="http://github.com/vicgarcia/dvMap">GitHub</a>.</p>
+                <a href="http://github.com/vicgarcia/divvystat">GitHub</a>.</p>
             </div>
 
             <div id="content-column-2">
