--- a/templates/style.scss
+++ b/templates/style.scss
@@ -1,13 +1,13 @@
-/* core style */
+$font-stack: 'Maven Pro', sans-serif;
+
+
 body {
-    font-family: 'Maven Pro', sans-serif;
-    color: #333;
+    font-family: $font-stack;
+    font-color: #333;
     background-color: #DDE2E3;
     min-width: 800px;}
-a, a:hover {
-    /* text-decoration: none;
-    */ color: #333;
-}
+
+a, a:hover { color: #333; }
 
 p {
     line-height: 1.4em;
@@ -36,60 +36,42 @@ p {
     font-size: 1.75em;
 }
 
+
 /* style for marker popups */
+
 .markerBox {
-    width: 300px;
+    width: 260px;
     margin-bottom: 20px;
-}
 
-.markerHeadline {
-    margin-bottom: -6px;
-    line-height: 1;
-    clear: both;}
-.markerAvailabile {
-    line-height: 1;
-    clear: both;}
-.markerTimeline {
-    height: 150px;
-    width: 300px;
-    margin-top: -10px;
-    margin-bottom: 5px;
-    clear: both;
-}
+    h2 { margin: 0; padding: 0; }
+    h4 { margin: 3px 0 9px 3px; padding: 0; }
 
-.markerGraph {
-    height: 150px;
-    width: 300px;
-    margin-top: -10px;
-    margin-bottom: 0;
-    clear: both;
-}
+    .markerTimeline {
+        height: 120px;
+        width: 260px;
+        margin-top: -10px;
+        margin-bottom: 5px;
+        clear: both;
+    }
 
-.graphNote {
-    margin-bottom: 0px;
-    margin-right: 20px;
-    font-size: 1em;
-    text-align: right;
-}
+    .markerGraph {
+        height: 120px;
+        width: 260px;
+        margin-top: -10px;
+        margin-bottom: 0;
+        clear: both;
+    }
 
-.markerAverages {
-    margin-top: 0px;
-    margin-right: 20px;
-    font-size: .9em;
-    text-align: right;
-}
-
-.rentals {
-    background-color: #3DB7E4;
-    color: white;
-}
-
-.returns {
-    background-color: #788A91;
-    color: white;
+    .graphNote {
+        margin-bottom: 0px;
+        margin-right: 20px;
+        font-size: 1em;
+        text-align: right;
+    }
 }
 
 /* style for outage charts */
+
 #outage-line {
     height: 220px;
     margin-top: -10px;
