work on converting to sass/neat style class use

--- a/templates/main.html
+++ b/templates/main.html
@@ -34,10 +34,10 @@
 
 <body>
 
-    <div id="wrap">
-        <div id="map">
+    <div class="wrap">
+        <div class="map" id="map">
         </div>
-        <div id="header">
+        <div class="header">
             <h1>divvystat.us : usage and rebalancing metrics</h1>
         </div>
         <div id="content">
