add mobile breakpoint, responses for map & header

--- a/templates/main.html
+++ b/templates/main.html
@@ -38,7 +38,7 @@
         <div class="map" id="map">
         </div>
         <div class="header">
-            <h1>divvystat.us : usage and rebalancing metrics</h1>
+            <h1>divvystat.us<span class="tagline">: usage and rebalancing metrics</span></h1>
         </div>
         <div id="content">
             <div id="content-column-1">
