convert html/css to neat grid thruout

--- a/templates/main.html
+++ b/templates/main.html
@@ -37,11 +37,13 @@
     <div class="wrap">
         <div class="map" id="map">
         </div>
+
         <div class="header">
             <h1>divvystat.us<span class="tagline">: usage and rebalancing metrics</span></h1>
         </div>
-        <div id="content">
-            <div id="content-column-1">
+
+        <div class="content">
+            <div class="copy">
                 <p>The line chart at the top of each station popup shows the number of bikes
                 available at a station over the previous 72 hours.  Data points are omitted
                 when the count doesn't change, creating an effect that draws attention to
@@ -66,16 +68,16 @@
                 <a href="http://github.com/vicgarcia/divvystat">GitHub</a>.</p>
             </div>
 
-            <div id="content-column-2">
+            <div class="chart">
                 <p>number of concurrent outages in last 72 hours</p>
-                <div id="outage-line">
+                <div class="outage-chart" id="outage-line">
                 </div>
+
                 <p>average concurrent outages over last 30 days</p>
-                <div id="outage-bar">
+                <div class="outage-chart" id="outage-bar">
                 </div>
             </div>
         </div>
-    <br class="clear" />
     </div>
 
     <!-- Piwik -->
