--- a/templates/style.scss
+++ b/templates/style.scss
@@ -32,16 +32,19 @@ p {
 }
 
 .wrap {
-    margin: 10px auto 40px auto;
+    @include outer-container();
+    margin: 15px auto 30px auto;
     background-color: $default-background-color;
-    width: 98%;
+    // width: 98%;
 
     @include media($widescreen) {
-        width: 85%;
         padding: 20px 20px 40px 20px;
+        // width: 85%;
     }
 
     .map {
+        @include span-columns(12);
+
         height: 500px;
         @include media($widescreen) {
             height: 600px;
@@ -52,18 +55,33 @@ p {
     }
 
     .header {
+        @include span-columns(12);
         background-color: $header-color;
-        margin: 0;
+        margin: 15px 0 15px 0;
 
         h1 {
-            padding: 10px 10px 10px 10px;
+            padding: 0 10px 0 10px;
             color: white;
-            font-size: 1.75em;
+            font-size: 1.6em;
         }
         .tagline {
             @include media($mobile) {
                 display: none;
             }
+        }
+    }
+
+    .content {
+        @include span-columns(12);
+
+        .copy {
+            @include span-columns(6 of 12);
+        }
+
+        .chart {
+            @include span-columns(6 of 12);
+            @include omega();
+
         }
     }
 }
@@ -127,24 +145,6 @@ p {
 
 // XXX this stuff get's merged into neat grid (get rid of what's useless)
 
-/* content formatting (below map) */
-#content {
-    width: 100%;
-    margin: auto;
-    padding: 0;
-}
-
-#content-column-1 {
-    width: 46%;
-    margin: 0 2% 0 2%;
-    float: left;
-}
-
-#content-column-2 {
-    width: 46%;
-    margin: 0 2% 0 2%;
-    float: left;
-}
 
 .clear {
     clear: both;
