create footer, add mobile response to content

--- a/templates/main.html
+++ b/templates/main.html
@@ -60,12 +60,6 @@
                 the number of station outages over the last 72 hours.  The bar graph shows
                 the average number of concurrent outages by day of the week over the
                 last 30 days.</p>
-
-                <p>This interactive application was originally created for the
-                <a href="http://divvybikes.com/datachallenge">Divvy Data Challenge</a>
-                by <a href="http://vicg4rcia.com">Vic Garcia</a>.</p>
-                <p>The source code is on available on
-                <a href="http://github.com/vicgarcia/divvystat">GitHub</a>.</p>
             </div>
 
             <div class="chart">
@@ -76,6 +70,14 @@
                 <p>average concurrent outages over last 30 days</p>
                 <div class="outage-chart" id="outage-bar">
                 </div>
+            </div>
+
+            <div class="footer">
+                <p>This interactive application was originally created for the
+                <a href="http://divvybikes.com/datachallenge">Divvy Data Challenge</a>
+                by <a href="http://vicg4rcia.com">Vic Garcia</a>.</p>
+                <p>The source code is on available on
+                <a href="http://github.com/vicgarcia/divvystat">GitHub</a>.</p>
             </div>
         </div>
     </div>
