--- a/templates/style.scss
+++ b/templates/style.scss
@@ -34,16 +34,16 @@ p {
 .wrap {
     @include outer-container();
     margin: 15px auto 30px auto;
+    padding: 5px 5px 5px 5px;
     background-color: $default-background-color;
-    // width: 98%;
 
     @include media($widescreen) {
         padding: 20px 20px 40px 20px;
-        // width: 85%;
     }
 
     .map {
         @include span-columns(12);
+        @include omega();
 
         height: 500px;
         @include media($widescreen) {
@@ -56,6 +56,8 @@ p {
 
     .header {
         @include span-columns(12);
+        @include omega();
+
         background-color: $header-color;
         margin: 15px 0 15px 0;
 
@@ -75,14 +77,30 @@ p {
         @include span-columns(12);
 
         .copy {
-            @include span-columns(6 of 12);
+            @include span-columns(6);
+
+            @include media($mobile) {
+                @include span-columns(12);
+                @include omega();
+            }
         }
 
         .chart {
-            @include span-columns(6 of 12);
+            @include span-columns(6);
             @include omega();
 
+            width: 95%;
+
+            @include media($mobile) {
+                @include span-columns(12);
+                @include omega();
+            }
         }
+    }
+
+    .footer {
+        @include span-columns(12);
+        @include omega();
     }
 }
 
