use media query to determine copy WRT chart position

--- a/templates/main.html
+++ b/templates/main.html
@@ -55,12 +55,13 @@ w
                 removed from a station throughout the day.  This metric is an approximate
                 derrived from data collected from Divvy's website.</p>
 
-                <p>The chart and graph off the map show data on rebalancing efforts and
-                "outages", which occur when a station is either out of service, has no bikes
-                available, or has no dock spaces available for returns.  The line chart shows
-                the number of station outages over the last 72 hours.  The bar graph shows
-                the average number of concurrent outages by day of the week over the
-                last 30 days.</p>
+                <p>The chart and graph <span class="one-column-copy">below</span>
+                <span class="two-column-copy">to the right</span> show data on rebalancing
+                efforts and "outages", which occur when a station is either out of service,
+                has no bikes available, or has no dock spaces available for returns.
+                The line chart shows the number of station outages over the last 72 hours.
+                The bar graph showsthe average number of concurrent outages by day of
+                the week over the last 30 days.</p>
             </div>
 
             <div class="chart">
