--- a/templates/main.html
+++ b/templates/main.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name='viewport' content='width=device-width, initial-scale=0.72, maximum-scale=0.72, user-scalable=no' />
+    <meta name='viewport' content='width=device-width, initial-scale=0.80, maximum-scale=0.80, user-scalable=no' />
     <meta name='title' content='divvystat.us' />
     <meta name='description' content='an interactive map-based application for presentation and metrics of usage and rebalancing performance of the divvy bike sharing system in Chicago, IL' />
 
@@ -74,8 +74,8 @@
             </div>
 
             <div class="footer">
-                <p>This interactive application was originally created for the
-                <a href="http://divvybikes.com/datachallenge">Divvy Data Challenge</a>
+                <p>This interactive application was originally created for <br/>
+                the <a href="http://divvybikes.com/datachallenge">Divvy Data Challenge</a>
                 by <a href="http://vicg4rcia.com">Vic Garcia</a>.</p>
                 <p>The source code is on available on
                 <a href="http://github.com/vicgarcia/divvystat">GitHub</a>.</p>
