no line break in footer

--- a/templates/main.html
+++ b/templates/main.html
@@ -74,8 +74,8 @@
             </div>
 
             <div class="footer">
-                <p>This interactive application was originally created for <br/>
-                the <a href="http://divvybikes.com/datachallenge">Divvy Data Challenge</a>
+                <p>This application was originally created for the
+                <a href="http://divvybikes.com/datachallenge">Divvy Data Challenge</a>
                 by <a href="http://vicg4rcia.com">Vic Garcia</a>.</p>
                 <p>The source code is on available on
                 <a href="http://github.com/vicgarcia/divvystat">GitHub</a>.</p>
