add handling for mobile content omission

--- a/templates/main.html
+++ b/templates/main.html
@@ -44,10 +44,12 @@
 
         <div class="content">
             <div class="copy">
-                <p>The line chart at the top of each station popup shows the number of bikes
+                <span class="two-column-copy">
+                <p>The line graph on each station popup shows the number of bikes
                 available at a station over the previous 72 hours.  Data points are omitted
                 when the count doesn't change, creating an effect that draws attention to
                 periods of higher use.</p>
+                </span>
 
                 <p>The bar graph at the bottom of each popup shows the average usage per day
                 of the week in the last 30 days.  Usage is measured as the number of bikes
