--- a/templates/main.html
+++ b/templates/main.html
@@ -51,7 +51,7 @@
                 periods of higher use.</p>
                 </span>
 
-                <p>The bar graph at the bottom of each popup shows the average usage per day
+                <p>The bar graph on each station popup shows the average usage per day
                 of the week in the last 30 days.  Usage is measured as the number of bikes
                 removed from a station throughout the day.  This metric is an approximate
                 derrived from data collected from Divvy's website.</p>
